# auto4508-project-part3

./: .gitignore  README.md  START_Part3.desktop  install_deps.sh  start.sh
artifacts/: manifest.csv
artifacts/maps/: discovery_map.data  discovery_map.pgm  discovery_map.yaml
artifacts/maps/bakcs/: discovery_map.data  discovery_map.pgm  discovery_map.yaml
artifacts/models/: greek_letters_labels.txt
artifacts/photos/: manifest.csv
config/: fastdds_no_shm.xml
docs/: DEBUG_PLAN.md  PART3_DEVELOPMENT_PLAN.md  Question_Record.md  ROBOT_MOTION_DEV_PLAN.md  SIM_TEST_GUIDE.md  TASK_ALLOCATION.md  TOPICS.md  command.txt  qa.md  ui_dataflow.drawio  ui_interface.md  whole_test.md
scripts/: fake_scan_pub.py  launch.sh  pub_image.py
src/auto_nav_part3/: package.xml  setup.cfg  setup.py
src/auto_nav_part3/auto_nav_part3/: __init__.py  camera_info_publisher.py  colour_detector.py  greek_detector.py  mapping_service.py  photo_logger.py  teleop_keyboard.py  ui_status.py
src/auto_nav_part3/auto_nav_part3/bridge_2_robot/: oakd_camera.py
src/auto_nav_part3/auto_nav_part3/mapping/: exploration_node copy.py.bak  exploration_node.py  map_manager.py  mapping_service.py
src/auto_nav_part3/auto_nav_part3/navigation/: waypoint_service.py
src/auto_nav_part3/auto_nav_part3/perception/: colour_detector.py  greek_detector.py  greek_detector.py.bak  oakd_camera.py  perception_adapter.py  perception_utils.py  run_perception.py
src/auto_nav_part3/auto_nav_part3/safety/: rolling_recorder.py  safety_monitor.py  teleop_keyboard.py
src/auto_nav_part3/auto_nav_part3/simulation/urdf/: pioneer.urdf
src/auto_nav_part3/auto_nav_part3/simulation/worlds/: discovery_15x15.sdf  discovery_15x15_more_obstacles.sdf
src/auto_nav_part3/auto_nav_part3/system/: state_manager.py
src/auto_nav_part3/auto_nav_part3/test/: test_roration.py
src/auto_nav_part3/config/: ekf.yaml  ekf_physical.yaml  exploration.yaml  map_manager.yaml  nav2_params.yaml  nav2_params_physical.yaml  safety.yaml  safety_physical.yaml  slam_toolbox.yaml  slam_toolbox_localization.yaml  slam_toolbox_physical.yaml  twist_mux.yaml  waypoint.yaml
src/auto_nav_part3/launch/: camera_bringup.launch.py  nav2_bringup.launch.py  part3_minimal.launch.py  physical_bringup.launch.py  sim_bringup.launch.py  teleop.launch.py
src/auto_nav_part3/resource/models/: greek_letters.onnx  greek_letters.onnx.data
src/auto_nav_part3/resource/models/baks/: greek_letters.onnx.data
src/auto_nav_part3/rviz/: pioneer.rviz
src/auto_nav_part3/simulation/urdf/: pioneer.urdf
src/auto_nav_part3/test/: test_docs_contract.py  test_perception_utils.py  test_safety_monitor_manual.py
src/part2/: gps_waypoint_runner.py  joy_controller (3).py  nav2_launch (2).py  oakd_camera (2).py
src/part2/config/: ekf (1).yaml  nav2_params (2).yaml
training/: augment_real_letters.py  check_model.py  generate_dataset.py  test_model.py  train_model.py
ui/: app.py
ui/static/: style.css
ui/templates/: index.html
~/auto4508_artifacts/maps/: discovery_map.pgm  discovery_map.yaml
