<?xml version="1.0"?>
<package format="3">
  <name>auto_nav_part3</name>
  <version>0.1.0</version>
  <description>Minimal ROS2 package for AUTO4508 Part 3 mapping and discovery.</description>
  <maintainer email="team18@example.com">AUTO4508 Team 18</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 message / service packages -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>

  <!-- ROS2 nodes used in launch -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>

  <!-- Vision: cv_bridge + OpenCV -->
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>vision_opencv</exec_depend>

  <!-- Python system packages -->
  <exec_depend>python3-opencv</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-PIL</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>