<?xml version="1.0"?>
<package format="3">
  <name>auto_nav_part3</name>
  <version>0.1.0</version>
  <description>Minimal ROS2 package for AUTO4508 Part 3 mapping and discovery.</description>
  <maintainer email="team18@example.com">AUTO4508 Team 18</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <!-- M1.C1.1：EKF 融合定位（odom + IMU → /odometry/filtered + odom→base_link TF） -->
  <exec_depend>robot_localization</exec_depend>
  <!-- M2.C2.1：slam_toolbox 在线异步建图（/scan + TF → /map + map→odom TF） -->
  <exec_depend>slam_toolbox</exec_depend>
  <!-- M3.C3.1：Nav2 导航栈（全局/局部规划、避障、恢复行为） -->
  <exec_depend>navigation2</exec_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
